[package]
name = "focusbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
chrono = { version = "0.4.38", features = ["now"] }
rusqlite = { version = "0.32.1", features = ["chrono"] }
